--- a/index.html
+++ b/index.html
@@ -880,11 +880,11 @@ duration = t<sub>reclaim</sub> - t<sub>peak</sub></pre>
     </p>
     <div class="idx-main-wrapper" id="idx-container">
       <div class="idx-column" id="idx-events">
-          <div class="idx-item" data-id="terrorist attack">terrorist attack</div>
+          <div class="idx-item" data-id="terrorist attack">Terrorist attack</div>
           <div class="idx-item" data-id="natural disaster">Natural disaster</div>
           <div class="idx-item" data-id="financial Crisis">Financial Crisis</div>
           <div class="idx-item" data-id="tech-boom">AI Innovation</div>
-          <div class="idx-item" data-id="political event">political event</div>
+          <div class="idx-item" data-id="political event">Political event</div>
           <div class="idx-item" data-id="public Health Crisis">Public Health Crisis</div>
       </div>
 
