--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@ duration = t<sub>reclaim</sub> - t<sub>peak</sub></pre>
           <div class="idx-item" data-id="terrorist attack">Terrorist attack</div>
           <div class="idx-item" data-id="natural disaster">Natural disaster</div>
           <div class="idx-item" data-id="financial Crisis">Financial Crisis</div>
-          <div class="idx-item" data-id="tech-boom">AI Innovation</div>
+          <div class="idx-item" data-id="tech-boom">Technological Boom</div>
           <div class="idx-item" data-id="political event">Political event</div>
           <div class="idx-item" data-id="public Health Crisis">Public Health Crisis</div>
       </div>
@@ -918,7 +918,6 @@ duration = t<sub>reclaim</sub> - t<sub>peak</sub></pre>
       'public Health Crisis': ['health Care', 'tech']
     };
       
-      // 页面加载完成后启动
       window.onload = () => initInteractiveMap(myMapping);
   </script>
 
