--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ duration = t<sub>reclaim</sub> - t<sub>peak</sub></pre>
 
   <div class="chapter-section fear-section" id="story">
     <div class="fear-copy">
-      <h3 class="section-label">The Anatomy of Fear</h3>
+      <h3 class="section-label">The Anatomy of Fear & Euphoria</h3>
       <p>
       Market reactions to sudden shocks are rarely uniform. Some events trigger abrupt drops, others lead to hesitation, and a few are followed by rapid recoveries or even rallies. What appears as a simple deviation often hides very different dynamics.
       </p>
@@ -916,13 +916,6 @@ duration = t<sub>reclaim</sub> - t<sub>peak</sub></pre>
   </script>
 
   </div>
-  <div class="chapter-section">
-    <h3>Conclusion</h3>
-    <p>
-      Conclusion
-    </p>
-  </div>
-
   <footer class="site-footer">
     <p>
       ADA Project · DataPandas · EPFL © 2025
