Add Final message

--- a/index.html
+++ b/index.html
@@ -916,6 +916,15 @@ duration = t<sub>reclaim</sub> - t<sub>peak</sub></pre>
   </script>
 
   </div>
+  <div class="chapter-section">
+    <div class="fear-copy">
+      <p><strong>Final message to the reader</strong></p>
+      <p>You don’t need to predict crises. You need to recognize patterns.</p>
+      <p>Markets don’t think. They react.</p>
+      <p>And like any system under stress, their behavior leaves traces — if you know how to read the signs.</p>
+    </div>
+  </div>
+
   <footer class="site-footer">
     <p>
       ADA Project · DataPandas · EPFL © 2025
