add navigation bar effets

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     </div>
     <nav class="header-nav">
         <ul>
-            <li><a href="#intro">Overview</a></li>
-            <li><a href="#research-questions">Research</a></li>
-            <li><a href="#methodology">Methodology</a></li>
-            <li><a href="#story">Story</a></li>
+          <li><a href="#intro" class="nav-link">Overview</a></li>
+          <li><a href="#research-questions" class="nav-link">Research</a></li>
+          <li><a href="#methodology" class="nav-link">Methodology</a></li>
+          <li><a href="#story" class="nav-link">Anatomy</a></li>
+          <li><a href="#sectoral" class="nav-link">Natural Selection</a></li>
+          <li><a href="#contagion" class="nav-link">Contagion</a></li>
+          <li><a href="#resilience" class="nav-link">Resilience</a></li>
         </ul>
     </nav>
 </header>
@@ -901,6 +904,7 @@ duration = t<sub>reclaim</sub> - t<sub>peak</sub></pre>
   </div>
 
   <script src="assets/js/interactive-map.js"></script>
+  <script src="assets/js/scroll-spy-nav-bar.js"></script>
   
   <script>
       const myMapping = {
